plugins {
    id 'java-library'
    id 'maven-publish'
    id 'com.diffplug.spotless' version '6.11.0'
    id 'signing'
    id 'cl.franciscosolis.sonatype-central-upload' version '1.0.3'
}

repositories {
    mavenCentral()
    maven {
        url 'https://oss.sonatype.org/service/local/staging/deploy/maven2/'
    }
}

dependencies {
    api 'com.squareup.okhttp3:okhttp:5.2.1'
    api 'com.fasterxml.jackson.core:jackson-databind:2.18.2'
    api 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.18.2'
    api 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.18.2'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.2'
}


sourceCompatibility = 1.8
targetCompatibility = 1.8

tasks.withType(Javadoc) {
    failOnError false
    options.addStringOption('Xdoclint:none', '-quiet')
}

spotless {
    java {
        palantirJavaFormat()
    }
}


java {
    withSourcesJar()
    withJavadocJar()
}


group = 'com.getkard'

version = '0.40.4'

jar {
    dependsOn(":generatePomFileForMavenPublication")
    archiveBaseName = "kard-financial-sdk"
}

sourcesJar {
    archiveBaseName = "kard-financial-sdk"
}

javadocJar {
    archiveBaseName = "kard-financial-sdk"
}

signing {
    sign(publishing.publications)
}

test {
    useJUnitPlatform()
    testLogging {
        showStandardStreams = true
    }
}

publishing {
    publications {
        maven(MavenPublication) {
            groupId = 'com.getkard'
            artifactId = 'kard-financial-sdk'
            version = '0.40.4'
            from components.java
            pom {
                name = 'kard'
                description = 'The official SDK of kard'
                url = 'https://buildwithfern.com'
                licenses {
                    license {
                        name = 'The MIT License (MIT)'
                        url = 'https://mit-license.org/'
                    }
                }
                developers {
                    developer {
                        name = 'kard'
                        email = 'developers@kard.com'
                    }
                }
                scm {
                    connection = 'scm:git:git://github.com/KardFinancial/kard-java-sdk.git'
                    developerConnection = 'scm:git:git://github.com/KardFinancial/kard-java-sdk.git'
                    url = 'https://github.com/KardFinancial/kard-java-sdk'
                }
            }
        }
    }
}

sonatypeCentralUpload {
    username = "$System.env.MAVEN_USERNAME"
    password = "$System.env.MAVEN_PASSWORD"

    archives = files(
        "$buildDir/libs/kard-financial-sdk-" + version + ".jar",
        "$buildDir/libs/kard-financial-sdk-" + version + "-sources.jar",
        "$buildDir/libs/kard-financial-sdk-" + version + "-javadoc.jar"
    )

    pom = file("$buildDir/publications/maven/pom-default.xml")
    signingKey = "$System.env.MAVEN_SIGNATURE_SECRET_KEY"
    signingKeyPassphrase = "$System.env.MAVEN_SIGNATURE_PASSWORD"
}

signing {
    def signingKeyId = "$System.env.MAVEN_SIGNATURE_KID"
    def signingKey = "$System.env.MAVEN_SIGNATURE_SECRET_KEY"
    def signingPassword = "$System.env.MAVEN_SIGNATURE_PASSWORD"
    useInMemoryPgpKeys(signingKeyId, signingKey, signingPassword)
    sign publishing.publications.maven
}

sonatypeCentralUpload.dependsOn build
